# terminal-expander

./: .gitignore  Cargo.toml  README.md  README.sync-conflict-20260617-175352-RJ55ABF.md  project-plan.csv  tasks.csv
.github/workflows/: ci.yml
cli-expander-cli/: Cargo.toml
cli-expander-cli/src/: main.rs  main.sync-conflict-20260617-175445-RJ55ABF.rs
cli-expander-config/: Cargo.toml
cli-expander-config/src/: csv.rs  lib.rs
cli-expander-inject/src/: injector.rs  lib.rs
cli-expander-ui/src/: form.rs  form.sync-conflict-20260617-175317-RJ55ABF.rs
config/: README.md
dev/: cli-expander-dev-plan.csv  run.sh  tasks.csv
dev/agents/: AGENTS.md  CONTEXT.md  CONVENTIONS.md  DECISIONS.md  MEMORY.csv  agent-engines.yaml  qc-config.yaml
dev/agents/agent-docs/: prompt.md
dev/agents/agent-form-tui/: prompt.md
dev/agents/agent-librarian/: prompt-read.md  prompt-write.md  prompt.md
dev/agents/agent-orchestrator/: prompt.md
dev/agents/agent-planner/: prompt.md
dev/agents/agent-platform/: prompt.md
dev/agents/agent-qc/: prompt.md
dev/agents/agent-rust-core/: prompt.md
dev/agents/agent-shell/: prompt.md
dev/agents/agent-test-build/: prompt.md
dev/ai-prompt/: documentation-build-prompt.md
dev/detail-md/phase-14-tmux/: P14-02-cli-output-modes.md  P14-03-tmux-target-pane-support.md
dev/working-plan/: README.md
docs/: architecture.md
examples/: base.yml  forms-advanced.sync-conflict-20260617-175346-RJ55ABF.yml  forms-advanced.yml
examples/ai-prompts/: opencode.yml
integrations/opencode/: CANCELED.md  README.md  cli-expander-prompts.ts
shell/: cli-expander.bash  cli-expander.sync-conflict-20260617-175441-VRM6NU6.bash  texpand.bash
texpand-cli/: Cargo.toml
texpand-cli/src/: main.rs
texpand-cli/tests/: integration.rs
texpand-config/: Cargo.toml
texpand-config/src/: config.rs  error.rs  lib.rs  match_file.rs
texpand-detect/: Cargo.toml
texpand-detect/src/: event.rs  lib.rs  source.rs
texpand-inject/: Cargo.toml
texpand-inject/src/: injector.rs  lib.rs
texpand-match/: Cargo.toml
texpand-match/src/: buffer.rs  lib.rs  matcher.rs
texpand-render/: Cargo.toml
texpand-render/src/: extension.rs  lib.rs  template.rs
texpand-ui/: Cargo.toml
texpand-ui/src/: form.rs  lib.rs
