[workspace]
resolver = "2"
members = [
    "texpand-config",
    "texpand-detect",
    "texpand-match",
    "texpand-render",
    "texpand-inject",
    "texpand-ui",
    "texpand-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
anyhow = "1"
thiserror = "1"
log = "0.4"
regex = "1"
