[workspace]
resolver = "2"
members = [
    "cli-expander-config",
    "cli-expander-detect",
    "cli-expander-match",
    "cli-expander-render",
    "cli-expander-inject",
    "cli-expander-ui",
    "cli-expander-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "1"
log = "0.4"
regex = "1"
csv = "1.3"
